task: Update dependecies