@@ -43,7 +43,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+   <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -52,6 +52,7 @@
                 <configuration>
                     <argLine>
                         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-exports=java.base/sun.security.action=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
